# susun

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  deny.toml
crates/susun/: Cargo.toml
crates/susun-build/: Cargo.toml
crates/susun-build/src/: buildx.rs  dockerfile.rs  dockerignore.rs  engine.rs  error.rs  event.rs  lib.rs  manifest.rs  resolve.rs
crates/susun-cli/: Cargo.toml
crates/susun-cli/src/: args.rs  main.rs
crates/susun-cli/tests/: cli.rs
crates/susun-compat/: Cargo.toml
crates/susun-compat/benches/: phase5_budgets.rs
crates/susun-compat/src/: corpus.rs  error.rs  harness.rs  lib.rs  matrix.rs  oracle.rs  performance.rs  security.rs
crates/susun-compat/tests/: performance.rs
crates/susun-convergence/: Cargo.toml
crates/susun-convergence/src/: converge.rs  decision.rs  deployment.rs  diagnostics.rs  diff.rs  error.rs  image.rs  impact.rs  lib.rs  orphan.rs  ownership.rs  policy.rs  render.rs  scale.rs  volume.rs
crates/susun-convergence/src/fingerprint/: digest.rs  input.rs  mod.rs  schema.rs
crates/susun-convergence/src/plan/: mod.rs  noop.rs  recreate.rs  scale.rs
crates/susun-diagnostics/: Cargo.toml  catalog.toml
crates/susun-diagnostics/src/: code.rs  diagnostic.rs  lib.rs  report.rs
crates/susun-diagnostics/tests/: report.rs
crates/susun-engine/: Cargo.toml
crates/susun-engine-bollard/: Cargo.toml
crates/susun-engine-bollard/src/: lib.rs
crates/susun-engine-bollard/tests/: adapter_contract.rs  doctor_contract.rs  endpoint_contract.rs
crates/susun-engine-bollard/tests/fixtures/: docker-desktop-data-usage.json  podman-data-usage.json
crates/susun-engine-bollard/tests/support/: mod.rs
crates/susun-engine/src/: artifact.rs  capability.rs  cleanup.rs  doctor.rs  engine.rs  error.rs  identity.rs  inventory.rs  lib.rs  operation.rs  profile.rs  registry.rs  resource.rs  snapshot.rs
crates/susun-engine/tests/: capability_contract.rs  profile_contract.rs
crates/susun-graph/: Cargo.toml
crates/susun-graph/src/: lib.rs
crates/susun-loader/: Cargo.toml
crates/susun-loader/src/: context.rs  error.rs  lib.rs  loader.rs
crates/susun-loader/src/environment/: dotenv.rs  mod.rs  provider.rs  resolve.rs
crates/susun-loader/src/interpolation/: eval.rs  mod.rs  parser.rs
crates/susun-loader/src/parser/: adapter.rs  mod.rs
crates/susun-loader/tests/: context.rs  dotenv.rs  environment_precedence.rs  environment_provider.rs  interpolation.rs  interpolation_pipeline.rs  loader.rs  parser.rs
crates/susun-model/: Cargo.toml
crates/susun-model/src/: build.rs  dependency.rs  health.rs  lib.rs  name.rs  port.rs  project.rs  resource.rs  service.rs  volume.rs
crates/susun-model/tests/: serde.rs
crates/susun-normalize/: Cargo.toml
crates/susun-normalize/src/: error.rs  expand.rs  input.rs  lib.rs  normalize.rs  port.rs  provenance.rs  selection.rs  volume.rs
crates/susun-normalize/src/input/: build.rs  command.rs  dependency.rs  environment.rs  health.rs  mod.rs  port.rs  resource.rs  service.rs  volume.rs
crates/susun-normalize/src/merge/: mod.rs  service.rs  unique.rs
crates/susun-normalize/tests/: input_types.rs  minimal.rs
crates/susun-planner/: Cargo.toml
crates/susun-planner/src/: capability_check.rs  dag.rs  error.rs  id.rs  input.rs  lib.rs  naming.rs  options.rs  ownership.rs
crates/susun-planner/src/down/: mod.rs
crates/susun-planner/src/plan/: action.rs  mod.rs  reason.rs  schema.rs
crates/susun-planner/src/render/: human.rs  json.rs  mod.rs
crates/susun-planner/src/up/: mod.rs  resources.rs  services.rs
crates/susun-planner/tests/: artifact_compatibility.rs  secret_leakage.rs
crates/susun-runtime/: Cargo.toml
crates/susun-runtime/src/: cancel.rs  error.rs  event.rs  lib.rs  report.rs  retry.rs  runtime.rs  validate.rs  verify.rs
crates/susun-runtime/tests/: fake_engine_failures.rs
crates/susun-secret/: Cargo.toml
crates/susun-secret/src/: lib.rs
crates/susun-source/: Cargo.toml
crates/susun-source/src/: error.rs  lib.rs  map.rs  provider.rs  source.rs  span.rs
crates/susun-source/tests/: providers.rs  source_map.rs
crates/susun-testkit/: Cargo.toml
crates/susun-testkit/src/: assertions.rs  build.rs  engine.rs  engine_contract.rs  lib.rs  project.rs  snapshot.rs
crates/susun-validation/: Cargo.toml
crates/susun-validation/src/: lib.rs
crates/susun-watch/: Cargo.toml
crates/susun-watch/src/: lib.rs
crates/susun/examples/: build_inputs.rs  check.rs  config.rs  convergence_dry_run.rs  custom_engine_adapter.rs  inspect_report.rs  local_docker_up_down.rs  plan_only.rs  runtime_doctor.rs  sdk_summary.rs  studio_runtime_artifacts.rs
crates/susun/src/: analyzer.rs  artifacts.rs  inventory.rs  lib.rs  planning.rs  profiles.rs  render.rs  runtime.rs  status.rs  workspace.rs
crates/susun/tests/: analyzer.rs  artifacts.rs  build_facade.rs  capability_facade.rs  docker_compatible_facade.rs  inventory.rs  runtime_status.rs  studio_consumer.rs
docs/: 03_Phase_3_Basic_Runtime_with_Bollard.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dockerignore_parse.rs  plan_deserialize.rs
schemas/: README.md  capabilities.schema.json  compatibility-report.schema.json  diagnostics.schema.json  execution-report.schema.json  manifest.json  normalized-project.schema.json  plan.schema.json  project-summary.schema.json
scripts/: check-architecture.ps1  check-architecture.sh  check-diagnostics.ps1  check-diagnostics.sh  check-package-readiness.ps1  check-package-readiness.sh  check-real-world-catalog.ps1  check-real-world-catalog.sh  check-release-policy.ps1  check-release-policy.sh  check-release-readiness.ps1  check-release-readiness.sh  check-schemas.ps1  check-schemas.sh  check-sdk-readiness.ps1  check-sdk-readiness.sh  check-semver.sh  gate-phase10.ps1  gate-phase10.sh  gate-phase11.ps1  gate-phase11.sh  gate-phase12.ps1  gate-phase12.sh  gate-phase2.sh  gate-phase3.sh  gate-phase4.sh  gate-phase5.sh  gate-phase7.sh  gate-phase8.ps1  gate-phase8.sh  gate-phase9.ps1  gate-phase9.sh  gate-release.sh  generate-release-docs.ps1  generate-release-docs.sh  phase1-gate.sh  (+6 more)
(+43 files in other folders)
