[workspace]
members = ["crates/*", "spikes/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["wihlarkop"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# internal crates
susun-source = { path = "crates/susun-source" }
susun-diagnostics = { path = "crates/susun-diagnostics" }
susun-model = { path = "crates/susun-model" }
susun-normalize = { path = "crates/susun-normalize" }
susun-loader = { path = "crates/susun-loader" }
susun-validation = { path = "crates/susun-validation" }
susun-graph = { path = "crates/susun-graph" }
susun-engine = { path = "crates/susun-engine" }
susun-planner = { path = "crates/susun-planner" }
susun-runtime = { path = "crates/susun-runtime" }
susun-convergence = { path = "crates/susun-convergence" }
susun-build = { path = "crates/susun-build" }
susun-engine-bollard = { path = "crates/susun-engine-bollard" }
susun-testkit = { path = "crates/susun-testkit" }
susun = { path = "crates/susun" }

# third-party
bollard = "0.21"
futures-core = "0.3"
futures-util = "0.3"
indexmap = "2.14.0"
serde = { version = "1.0", features = ["derive"] }
saphyr = "0.0.6"
saphyr-parser = "0.0.6"
thiserror = "2.0"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release]
lto = "thin"
