[package]
name = "susun-build"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
indexmap = { workspace = true }
susun-model = { workspace = true }
susun-secret = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
