[package]
name = "susun-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "susun"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
susun      = { workspace = true }
clap       = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
