[package]
name = "susun-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "susun"
path = "src/main.rs"
doc = false

[lints]
workspace = true

[dependencies]
susun         = { workspace = true }
susun-build   = { workspace = true }
susun-diagnostics = { workspace = true }
susun-engine  = { workspace = true }
susun-engine-bollard = { workspace = true }
susun-planner = { workspace = true, features = ["serde"] }
susun-runtime = { workspace = true, features = ["serde"] }
susun-source  = { workspace = true }
clap          = { workspace = true }
futures-util  = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
