[package]
name = "susun-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = []
serde = ["dep:serde", "indexmap/serde", "susun-model/serde"]

[dependencies]
futures-core = { workspace = true }
indexmap = { workspace = true }
susun-model = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
