[package]
name = "susun-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
susun-model       = { workspace = true }
susun-diagnostics = { workspace = true }
susun-normalize   = { workspace = true }
indexmap          = { workspace = true }
