[package]
name = "susun-loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
susun-source      = { workspace = true }
susun-diagnostics = { workspace = true }
susun-model       = { workspace = true }
susun-normalize   = { workspace = true }
thiserror         = { workspace = true }
indexmap          = { workspace = true }
saphyr            = { workspace = true }
saphyr-parser     = { workspace = true }
