[package]
name = "susun-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
default = []
serde = ["dep:serde", "indexmap/serde"]

[dependencies]
indexmap = { workspace = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json = "1"
