[package]
name = "susun-normalize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
susun-model       = { workspace = true }
susun-source      = { workspace = true }
susun-diagnostics = { workspace = true }
indexmap          = { workspace = true }
thiserror         = { workspace = true }

[dev-dependencies]
susun-loader = { workspace = true }
