[package]
name = "susun-normalize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
susun-model       = { workspace = true }
susun-source      = { workspace = true }
susun-diagnostics = { workspace = true }
indexmap          = { workspace = true }
thiserror         = { workspace = true }

[dev-dependencies]
# Path-only (no version): susun-loader depends on susun-normalize
# normally, so a versioned dev-dependency here would make the two
# crates unpublishable in either order. Cargo strips path-only
# dev-dependencies from the packaged crate, so this is fine to publish.
susun-loader = { path = "../susun-loader" }
