[package]
name = "susun-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
serde = [
  "dep:serde",
  "indexmap/serde",
  "susun-engine/serde",
  "susun-planner/serde",
]

[dependencies]
susun-engine = { workspace = true }
susun-planner = { workspace = true }
futures-util = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
