[package]
name = "susun-validation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
susun-model       = { workspace = true }
susun-diagnostics = { workspace = true }
susun-normalize   = { workspace = true }
