[package]
name = "susun-watch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
notify = { workspace = true }
susun-build = { workspace = true }
thiserror = { workspace = true }
