[package]
name = "susun"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
susun-loader      = { workspace = true }
susun-normalize   = { workspace = true }
susun-validation  = { workspace = true }
susun-graph       = { workspace = true }
susun-engine      = { workspace = true }
susun-planner     = { workspace = true }
susun-runtime     = { workspace = true }
susun-model       = { workspace = true, features = ["serde"] }
susun-diagnostics = { workspace = true }
susun-source      = { workspace = true }
thiserror         = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }

[dev-dependencies]
susun-build          = { workspace = true }
susun-convergence    = { workspace = true }
susun-engine-bollard = { workspace = true }
susun-testkit        = { workspace = true }
tokio                = { workspace = true }
