[package]
name = "susun"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
susun-loader      = { workspace = true }
susun-normalize   = { workspace = true }
susun-validation  = { workspace = true }
susun-graph       = { workspace = true }
susun-engine      = { workspace = true, features = ["serde"] }
susun-planner     = { workspace = true, features = ["serde"] }
susun-runtime     = { workspace = true, features = ["serde"] }
susun-model       = { workspace = true, features = ["serde"] }
susun-diagnostics = { workspace = true }
susun-source      = { workspace = true }
susun-engine-bollard = { workspace = true, optional = true }
susun-watch       = { workspace = true, optional = true }
susun-build       = { workspace = true, optional = true }
thiserror         = { workspace = true }
serde             = { workspace = true }
serde_json        = { workspace = true }

[dev-dependencies]
susun-build          = { workspace = true }
susun-convergence    = { workspace = true }
susun-engine-bollard = { workspace = true }
susun-testkit        = { workspace = true }
tokio                = { workspace = true }

[features]
# Expose the real-Docker engine (susun-engine-bollard, which pulls in bollard).
bollard = ["dep:susun-engine-bollard"]
# Expose native filesystem watching (susun-watch, which pulls in notify's
# platform-specific OS bindings) and the Dockerignore type it needs for
# ignore-rule construction.
watch = ["dep:susun-watch", "dep:susun-build"]
